# storegate

./: README.md  coverage-noptorch.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
storegate/: __init__.py  const.py  formatters.py  logger.py  storegate.py  utilities.py
storegate/agent/: __init__.py  agent.py  grid_search_agent.py  random_search_agent.py  search_agent.py
storegate/database/: __init__.py  database.py  hybrid_database.py  numpy_database.py  staged_add.py  zarr_database.py
storegate/task/: __init__.py  agent_task.py  dl_env.py  dl_task.py  pytorch_metrics.py  pytorch_task.py  task.py
storegate/task/dataset/: __init__.py  storegate_dataset.py
storegate/task/pytorch/: __init__.py  pytorch_metrics.py  pytorch_util.py  storegate_dataset.py
tests/: conftest.py  test_agent_init.py  test_agents.py  test_dl_env.py  test_dl_task.py  test_formatters.py  test_hybrid_database.py  test_init.py  test_numpy_database.py  test_pytorch_metrics.py  test_pytorch_task.py  test_staged_add.py  test_storegate.py  test_task_init.py  test_utilities.py  test_zarr_database.py
tests/integration/: test_storegate_integration.py
tests/unit/: test_agent_task.py  test_concurrency.py  test_const.py  test_dl_task.py  test_hybrid_database.py  test_logger.py  test_numpy_database.py  test_pytorch_metrics.py  test_pytorch_task.py  test_search_agent.py  test_storegate.py  test_storegate_dataset.py  test_task_init.py  test_zarr_database.py
