[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "storegate"
version = "1.0.0"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2,<3",
    "zarr>=3.1.5,<4",
    "tqdm>=4.67.3,<5",
]

[project.optional-dependencies]
pytorch = [
    "torch>=2.10.0,<3",
    "torchinfo>=1.8.0,<2",
]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]
